explore more fractals

--- a/basic_example_writer_sgskip.ipynb
+++ b/basic_example_writer_sgskip.ipynb
@@ -2,98 +2,145 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": 5,
    "metadata": {},
-   "source": [
-    "\n",
-    "# Saving an animation\n",
-    "\n",
-    "\n",
-    "This example showcases the same animations as `basic_example.py`, but instead\n",
-    "of displaying the animation to the user, it writes to files using a\n",
-    "MovieWriter instance.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "Requested MovieWriter (ffmpeg) not available",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'readGif'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/anaconda3/envs/learn-env/lib/python3.6/site-packages/matplotlib/animation.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    160\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 161\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mavail\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    162\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'ffmpeg'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-97bf2a96714e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# Set up formatting for the movie files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mWriter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0manimation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ffmpeg'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0mwriter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetadata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0martist\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Me'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbitrate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1800\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/envs/learn-env/lib/python3.6/site-packages/matplotlib/animation.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    162\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    163\u001b[0m             raise RuntimeError(\n\u001b[0;32m--> 164\u001b[0;31m                 'Requested MovieWriter ({}) not available'.format(name))\n\u001b[0m\u001b[1;32m    165\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    166\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Requested MovieWriter (ffmpeg) not available"
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-ffd69a3b474f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# coding: utf-8\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mimages2gif\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwriteGif\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mPIL\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mImageDraw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mImageChops\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreadGif\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mconsole\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/envs/learn-env/lib/python3.6/site-packages/images2gif/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mimages2gif\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mreadGif\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mreadGif\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mimages2gif\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwriteGif\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mwriteGif\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'readGif'"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib\n",
-    "matplotlib.use(\"Agg\")\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.animation as animation\n",
+    "# coding: utf-8\n",
+    "from images2gif import writeGif\n",
+    "from PIL import Image, ImageDraw, ImageChops, readGif\n",
+    "\n",
+    "import console"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "trailing comma not allowed without surrounding parentheses (<ipython-input-3-7888c76ead3c>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-7888c76ead3c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    from images2gif import writeGif,\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m trailing comma not allowed without surrounding parentheses\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "W, H = 1024,1024\n",
+    "RESOLUTION = 5\n",
+    "FG, BG = '#ffbb00', '#009bff'\n",
+    "\n",
+    "#FG, BG = '#000000', '#ffffff'\n",
     "\n",
     "\n",
-    "def update_line(num, data, line):\n",
-    "    line.set_data(data[..., :num])\n",
-    "    return line,\n",
+    "def drange(start, stop, step=1):\n",
+    "    n = int(round((stop - start)/float(step)))\n",
+    "    if n > 1:\n",
+    "        return([start + step*i for i in range(n+1)])\n",
+    "    else:\n",
+    "        return([])\n",
     "\n",
-    "# Fixing random state for reproducibility\n",
-    "np.random.seed(19680801)\n",
+    "def irange(start, increments):\n",
+    "    mylist = [start]\n",
+    "    for i in increments:\n",
+    "        mylist.append(mylist[-1]+i)\n",
+    "    return mylist\n",
+    "\n",
+    "    \n",
+    "class Rect:\n",
+    "    def __init__(self, left, top, width, height):\n",
+    "        self.left = left\n",
+    "        self.right = left + width\n",
+    "        self.top = top\n",
+    "        self.bottom = top+height\n",
+    "\n",
+    "        self.centerx = left + (width/2)\n",
+    "        self.centery = top + (height/2)\n",
+    "\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "\n",
+    "        self.bbox = (left, top), (self.right, self.bottom)\n",
+    "\n",
+    "def drawSierpinski(surf, rect, fgcolor=FG, bgcolor=BG, level=6, topshade=True):\n",
+    "    try:\n",
+    "        rect.left\n",
+    "    except AttributeError:\n",
+    "        left, top, width, height = rect\n",
+    "        rect = Rect(left, top, width, height)\n",
+    "\n",
+    "    if level == 0:\n",
+    "        return\n",
+    "\n",
+    "    quarterWidth = (rect.width/4)+rect.left\n",
+    "    threeQuarterWidth = (rect.width/4*3)+rect.left\n",
+    "\n",
+    "    topRect = Rect(quarterWidth, rect.top, (rect.width / 2), (rect.height / 2))\n",
+    "    leftRect = Rect(rect.left, rect.centery, (rect.width/2), (rect.height/2))\n",
+    "    rightRect = Rect(rect.centerx, rect.centery, (rect.width / 2), (rect.height / 2))\n",
+    "\n",
+    "    #Shade topleft\n",
+    "    if topshade:\n",
+    "        surf.rectangle((rect.left, rect.top, rect.centerx, rect.bottom), fill=bgcolor)\n",
+    "    #outer triangle\n",
+    "    surf.polygon([(rect.centerx,rect.top),(rect.left,rect.bottom),(rect.right,rect.bottom)],fgcolor)\n",
+    "    #inner upside-down triangle\n",
+    "    surf.polygon([(quarterWidth,rect.centery),(rect.centerx,rect.bottom),(threeQuarterWidth, rect.centery)],bgcolor)\n",
+    "\n",
+    "    #do recursive calls\n",
+    "    drawSierpinski(surf, topRect, fgcolor, bgcolor, level-1, topshade)\n",
+    "    drawSierpinski(surf, leftRect, fgcolor, bgcolor, level-1, topshade)\n",
+    "    drawSierpinski(surf, rightRect, fgcolor, bgcolor, level-1, topshade)\n",
+    "\n",
+    "    return im\n",
+    "\n",
+    "def make_sierpinski(level, topshade=True):\n",
+    "    im = Image.new('RGB', (W, H), (255,255,255))\n",
+    "    surf = ImageDraw.Draw(im)\n",
+    "\n",
+    "    drawSierpinski(surf, Rect(0, 0, W, H), FG, BG, level, topshade)\n",
+    "    return im\n",
     "\n",
     "\n",
-    "# Set up formatting for the movie files\n",
-    "Writer = animation.writers['ffmpeg']\n",
-    "writer = Writer(fps=15, metadata=dict(artist='Me'), bitrate=1800)\n",
     "\n",
     "\n",
-    "fig1 = plt.figure()\n",
+    "im = Image.new('RGB', (W, H), (255,255,255))\n",
+    "surf = ImageDraw.Draw(im)\n",
     "\n",
-    "data = np.random.rand(2, 25)\n",
-    "l, = plt.plot([], [], 'r-')\n",
-    "plt.xlim(0, 1)\n",
-    "plt.ylim(0, 1)\n",
-    "plt.xlabel('x')\n",
-    "plt.title('test')\n",
-    "line_ani = animation.FuncAnimation(fig1, update_line, 25, fargs=(data, l),\n",
-    "                                   interval=50, blit=True)\n",
-    "line_ani.save('lines.mp4', writer=writer)\n",
+    "sierpinski1 = make_sierpinski(RESOLUTION)\n",
+    "sierpinski2 = make_sierpinski(RESOLUTION+1)\n",
     "\n",
-    "fig2 = plt.figure()\n",
+    "numbers = [int(n) for n in irange(0, drange(8,4,-0.0475))]\n",
     "\n",
-    "x = np.arange(-9, 10)\n",
-    "y = np.arange(-9, 10).reshape(-1, 1)\n",
-    "base = np.hypot(x, y)\n",
-    "ims = []\n",
-    "for add in np.arange(15):\n",
-    "    ims.append((plt.pcolor(x, y, base + add, norm=plt.Normalize(0, 30)),))\n",
+    "images = []\n",
+    "for x in numbers:\n",
+    "    a = sierpinski1.crop((x, x, W, W)).resize((512, 512), Image.ANTIALIAS)\n",
+    "    b = sierpinski2.crop((x, x, W, W)).resize((512, 512), Image.ANTIALIAS)\n",
     "\n",
-    "im_ani = animation.ArtistAnimation(fig2, ims, interval=50, repeat_delay=3000,\n",
-    "                                   blit=True)\n",
-    "im_ani.save('im.mp4', writer=writer)"
+    "    alpha = x / float(W/2)\n",
+    "    images.append(Image.blend(a, b, alpha))\n",
+    "    console.clear()\n",
+    "    print(str(alpha*100)+'%')\n",
+    "\n",
+    "\n",
+    "\n",
+    "image.save('sierp.gif')"
    ]
   },
   {
